k8s/controllers/matching-engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-engine
  namespace: matching-engine
  labels:
    app: matching-engine
spec:
  replicas: 3  # O HPA pode modificar isso automaticamente
  selector:
    matchLabels:
      app: matching-engine
  template:
    metadata:
      labels:
        app: matching-engine
    spec:
      containers:
        - name: matching-engine
          image: samirsauma/matching-engine:v79
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /test
              port: 3000
            initialDelaySeconds: 30  # Mais tempo para garantir que está pronto
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /test
              port: 3000
            initialDelaySeconds: 60  # Mais tempo para a API subir
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 5
