k8s/controllers/matching-engine/matching-engine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matching-engine-ingress
  namespace: matching-engine
  labels:
    app: matching-engine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "0"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: exchange.local
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: matching-engine
                port:
                  number: 80  # Agora está correto, pois o Service aceita tráfego na porta 80
